--- a/layer0/Cargo.toml
+++ b/layer0/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 hex-literal = "0.3.4"
 rust-crypto = "0.2.36"
 tokio = { version = "1", features = ["full"] }
+serde = "*"
+serde_json = "*"
+serde_derive = "*"
+json = "0.12.4"
