Added Testing Environment , Mechanism to detect corrupted Ppacket , stuck at : not accepting new clients after all connections are removed!

--- a/layer0/Dockerfile
+++ b/layer0/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.62
-COPY . /p2pnetwork_layer0
-WORKDIR /p2pnetwork_layer0
-CMD cargo run 2>/dev/null
+FROM rust:1.62 as builder
+
+RUN USER=root cargo new --bin rust-docker-web
+CMD ["./rust-docker-web"]
