Removed Database System, Added Lazy_static to handle global variables, added hardcoded sources as a file to be configurable, added bounce mechanism to bounce a connection req between nodes, moved entirely to static refrences instead of database, fixed freezing bug , ...

--- a/layer0/Cargo.toml
+++ b/layer0/Cargo.toml
@@ -8,11 +8,10 @@ edition = "2021"
 [dependencies]
 hex-literal = "0.3.4"
 rust-crypto = "0.2.36"
-tokio = { version = "1", features = ["full"] }
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
 json = "0.12.4"
-rusqlite = "0.28.0"
 chrono = "0.4.22"
 colored = "2.0.0"
+lazy_static = "1.4.0"
